<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Container"
    tools:context="ie.iamshanedoyle.factsgame.activities.HowToPlayActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/textViewHowTo"
        style="@style/Title"
        android:background="@drawable/title"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_up"
        android:drawablePadding="-6dp"
        android:text="@string/how_to_play" />

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/Fill"
        android:layout_below="@+id/textViewHowTo">

        <LinearLayout
            style="@style/Fill"
            android:orientation="vertical">

            <TextView
                style="@style/ScoresSubTitle"
                android:text="@string/how_to_play_desc" />

            <TextView
                style="@style/HowToTitles"
                android:text="@string/score_points"
                android:layout_marginTop="20dp"/>

            <TextView
                style="@style/ScoresSubTitle"
                android:text="@string/score_points_desc" />

            <TextView
                style="@style/HowToTitles"
                android:text="@string/build_up_streaks"
                android:layout_marginTop="20dp"/>

            <TextView
                style="@style/ScoresSubTitle"
                android:text="@string/build_up_streaks_desc_one"/>

            <TextView
                style="@style/ScoresSubTitle"
                android:text="@string/build_up_streaks_desc_two"
                android:layout_marginTop="15dp"/>

            <TextView
                style="@style/ScoresSubTitle"
                android:text="@string/build_up_streaks_desc_three"
                android:layout_marginTop="15dp"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
