<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Container"
    tools:context="ie.iamshanedoyle.factsgame.activities.GameActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/textViewScore"
        style="@style/GameInfo"
        android:layout_alignParentLeft="true"
        android:text="@string/score" />

    <TextView
        android:id="@+id/textViewStreak"
        style="@style/GameInfo"
        android:layout_alignParentRight="true"
        android:text="@string/streak" />


    <LinearLayout
        android:id="@+id/buttonContainer"
        style="@style/FillWidth"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonTrue"
            android:text="@string/true_text"
            style="@style/TrueButton" />

        <Button
            android:id="@+id/buttonFalse"
            android:text="@string/false_text"
            style="@style/FalseButton" />

    </LinearLayout>


</RelativeLayout>
